all content in-spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
+div #container-body  {
+  width: 1000px;
+}
+
 * {
   box-sizing: border-box;
 }
 
-div .body-container {
-  width: 500px;
-}
 
 * {
   font-family: "Helvetica Neue", "Helvetica", sans-serif;
@@ -18,7 +19,9 @@ list-style: none;
 img {
   font-size: 0;
 }
-
+ div {
+   vertical-align: top;
+ }
 /*******************
 Logo Header
 *******************/
@@ -26,11 +29,12 @@ Logo Header
 .top-header {
   font-size: 0px;
   display: inline-block;
+  max-width: 100%;
 }
 
 .logo-image {
   display: inline-block;
-  max-width: 5%;
+  max-width: 15%;
   margin: 0;
   padding: 0;
   font-size: 0;
@@ -38,7 +42,7 @@ Logo Header
 
 .label-image {
   display: inline-block;
-  max-width: 95%;
+  max-width: 85%;
   margin: 0;
   padding: 0;
   font-size: 0;
@@ -48,12 +52,71 @@ Logo Header
 Navigation
 *******************/
 
+.Nav-div {
+  background-color: #ddd;
+  width: 100%;
+}
+.Nav-div li {
+  display: inline-block;
+  color: #3e7fbb;
+  background-color: #f19484;
+  padding: 10px;
+  margin: 15px;
+  border: 1px #ddd solid;
+  box-shadow: 2px 2px #808b96;
+}
+
+/*******************
+Main-body
+*******************/
+
+.columns-container-main {
+  display: inline-block;
+}
+
+.column-container-left {
+  display: inline-block;
+  max-width: 66.7%;
+}
+
+.column-narrow-right {
+  display: inline-block;
+  max-width: 33.3%;
+}
+
+.column-main-content {
+  display: inline-block;
+}
+
+.columns-container-info-blocks {
+  display: inline-block;
+}
+
+.info-photo {
+  display: inline-block;
+  max-width: 50%;
+}
+
+.info-text {
+  display: inline-block;
+  max-width: 50%;
+}
 
 
+/*******************
+Event Boxes
+*******************/
 
+.event-preview-image {
+  display: inline-block;
+  max-width: 33.3%;
+}
 
-
-
+.event-preview {
+  display: inline-block;
+  max-width: 67.3%;
+  vertical-align: top;
+}
 
 
 
@@ -93,4 +156,17 @@ Static Box
 .fixed-box button {
   width: 10%;
   height: 25px;
+}
+
+
+/*******************
+Footer
+*******************/
+.guillmet {
+  color: #db4b38;
+}
+
+.footer li {
+  display: inline-block;
+  margin: 75px;
 }
